--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open"
+    "dev": "webpack --mode development",
+    "build": "webpack --progress -p",
+    "start": "webpack-dev-server --open",
+    "watch": "webpack --progress --watch --mode=development"
   },
   "repository": {
     "type": "git",
@@ -19,12 +21,36 @@
   },
   "homepage": "https://github.com/Emmanuelaaron/restaurant_page#readme",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^4.5.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.9.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.8.0",
+    "stylelint-scss": "^3.17.2",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "autoprefixer": "^7.2.5",
+    "css-loader": "^5.0.1",
+    "exports-loader": "^0.6.4",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.10",
+    "precss": "^3.0.0",
+    "sass-loader": "^6.0.6"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.3",
+    "css-reset-and-normalize": "^2.1.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
